src/sass/app/metatrader.scss
@import './metatrader_download';

#mt_account_management {
    margin: 0;

    > div {
        display: flex;
    }
    .mt-container {
        padding: 20px;
    }
    .mt-panel {
        border: 1px solid $COLOR_GRAY;
        border-radius: $BORDER_RADIUS;
        margin-bottom: 20px;
    }
    .flex {
        display: flex;
    }
    .get-started-link {
        display: block;
        padding: 10px 20px;
        margin-bottom: 20px;
        border-radius: $BORDER_RADIUS;
        color: $COLOR_BLUE;
        background: $COLOR_LIGHT_GRAY;
        font-weight: bold;

        &:before {
            content: '';
            background-image: url('../images/pages/metatrader/dashboard/get_started.svg');
            background-size: 16px 16px;
            height: 16px;
            width: 16px;
            display: inline-block;
            vertical-align: middle;
            margin-right: 10px;
        }
    }
    .password-type {
        display: flex;
        flex-direction: row;
        justify-content: center;
        margin-top: 8px;

        > *:not(:last-child) {
            margin-right: 20px;
        }
    }
    #account_selector {
        position: relative;
        cursor: pointer;
        margin-bottom: 10px;

        #mt5_account, #accounts_list {
            border: 1px solid $COLOR_BLUE_SHADE;
        }
        #mt5_account {
            min-height: 38px;
            line-height: 38px;
            padding: 0 10px;
            box-sizing: border-box;
            margin: 0;
            overflow: hidden;
            background: $COLOR_BLUE_SHADE;
            color: $COLOR_WHITE;
            border-radius: $BORDER_RADIUS;

            &.open {
                border-radius: $BORDER_RADIUS $BORDER_RADIUS 0 0;
            }
            &:after {
                content: '';
                display: block;
                float: right;
                margin-top: 17px;
                margin-bottom: 17px;
                border-left: 5px solid transparent;
                border-right: 5px solid transparent;
                border-top: 5px solid $COLOR_WHITE;
            }
        }
        #accounts_list {
            width: 100%;
            padding: 5px 0;
            border-radius: 0 0 $BORDER_RADIUS $BORDER_RADIUS;
            border-top: 0;
            display: none;
            position: absolute;
            background: $COLOR_WHITE;
            z-index: 1;
            box-sizing: border-box;
            font-size: $FONT_SIZE_S;

            .acc-group {
                line-height: 30px;
                padding: 0 5px;
                color: $COLOR_DARK_GRAY;

                &:hover {
                    cursor: auto;
                }
            }
            .acc-name {
                line-height: 30px;
                padding: 0 20px;

                &:hover {
                    color: $COLOR_BLUE_SHADE;
                    background: $COLOR_LIGHT_GRAY;
                }
                &.selected {
                    background: $COLOR_GRAY;
                }
                .mt-balance {
                    float: right;
                    font-size: $FONT_SIZE_XS;
                }
                .mt-icon {
                    float: right;
                }
                .mt-login {
                    padding-left: 3px;
                    font-size: 90%;
                }
            }
            .separator {
                margin: 5px 0;
            }
        }
    }
    #mt_right_panel {
        font-size: $FONT_SIZE_S;

        .platforms {
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            @media (min-width: 992px) {
                margin-left: -10px;
                margin-right: -10px;
            }

            li {
                width: 50%;
                text-align: center;
                margin-bottom: 20px;
                padding: 0 5px;
                box-sizing: border-box;

                img {
                    display: block;
                    height: 30px;
                    margin: 0 auto 10px;
                }
            }
        }
        .badges {
            display: flex;
            justify-content: space-around;
            width: 100%;

            span {
                width: 85px;
                height: 25px;
                background-size: contain;
            }
        }
    }
    #account_details {
        flex: 0;

        .acc-info {
            font-size: $FONT_SIZE_S;

            .balance {
                font-size: $FONT_SIZE_XXL;
                color: $COLOR_BLUE;
            }
        }
    }
    .acc-actions {
        display: flex;

        * {
            transition: unset !important;
        }
        a, > span {
            background: $COLOR_LIGHT_GRAY;
            line-height: 40px;
            font-weight: normal;
            flex: 1;

            &:first-child {
                border-radius: $BORDER_RADIUS 0 0;
            }
            &:last-child {
                border-radius: 0 $BORDER_RADIUS 0 0;
            }
            &.selected {
                color: $COLOR_WHITE;
                background: $COLOR_BLUE_SHADE;
            }
            &:hover {
                text-decoration: none;
            }
        }
    }
    .fst-container {
        #fst_action {
            position: relative;

            h3 {
                padding-top: 10px;
                margin-bottom: 5px;
            }
            .separator, #main_msg {
                margin-bottom: 20px;
            }
            button .barspinner.white {
                height: 13px;
                margin: 3px;
            }
            #frm_cashier {
                .mt-panel {
                    margin-bottom: 0;
                    padding: 15px;
                    flex: 1;
                }
                .binary-balance, .mt5-balance {
                    font-weight: bold;
                    color: $COLOR_GRAY_SHADE;
                }
            }
            #frm_manage_password {
                #token_error {
                    margin-bottom: 10px;
                }
                select:focus {
                    outline: none;
                }
                button[type='submit'] {
                    line-height: 22px;
                }
            }
            #frm_revoke_mam #msg_form {
                text-align: center;
            }
            #frm_new_account_mam {
                .margin-left-right-20 {
                    margin-left: -20px;
                    margin-right: -20px;
                }
                .fill-bg-color.margin-left-right-20 {
                    margin-bottom: -20px;
                }
            }
            .type-group {
                .mt5_type_box {
                    width: 88px;
                    height: 88px;
                    margin: 0 auto;
                    border: 1px solid $COLOR_GRAY;
                    border-radius: $BORDER_RADIUS;
                    cursor: pointer;
                    position: relative;
                    display: flex;
                    align-items: center;

                    &:hover {
                        border-color: $COLOR_BLUE;
                    }
                    &:before {
                        content: '';
                        width: 16px;
                        height: 16px;
                        border: 1px solid $COLOR_GRAY;
                        border-radius: 50%;
                        position: absolute;
                        right: 6px;
                        top: 6px;
                    }
                    div {
                        font-weight: bold;
                        color: $COLOR_BLUE;
                        text-align: center;
                        flex: 1;
                    }
                    img {
                        height: 65px;
                        margin: auto;
                    }
                    &.disabled, &.existed {
                        cursor: default;

                        &:hover {
                            border-color: $COLOR_GRAY;
                        }
                        &:after {
                            content: '';
                            width: 88px;
                            height: 88px;
                            position: absolute;
                            background: rgba(0, 0, 0, 0.05);
                        }
                    }
                    &.existed:before {
                        background: url('../images/pages/metatrader/dashboard/tick_gray.svg');
                        border: none;
                    }
                    &.selected {
                        border-color: $COLOR_BLUE;
                        cursor: default;

                        &:before {
                            background: url('../images/pages/metatrader/dashboard/tick.svg');
                            border: none;
                        }
                    }
                }
                p {
                    max-width: 140px;
                    margin: 0 auto;
                }
            }
            #new_account_msg ul.bullet {
                margin-top: 0;
                margin-bottom: 0;
            }
        }
    }
    .txt-left {
        text-align: left;
    }
    .separator {
        height: 2px;
    }
    ul.checked.small > li {
        background-size: 16px;
        padding-left: 24px;
    }
    #account_desc {
        .button {
            span {
                padding: 10px 5px;
                line-height: 18px;
            }
        }
    }
}

@media (max-width: 1199px) {
    #mt_account_management {
        #accounts_list {
            font-size: $FONT_SIZE_S;

            .mt-balance {
                font-size: $FONT_SIZE_XS !important;
            }
        }
    }
}

@media (max-width: 991px) {
    #mt_account_management .mt-container {
        padding: 10px;
    }
}

@media (max-width: 768px) {
    #mt_account_management .mobile-balance {
        display: flex;
    }
}

.mt-sidebar-button {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100px;
    justify-content: space-around;
    text-align: center;

    .small-icon {
        img {
            width: 76px;
        }
    }
}

